fix: change gap between article tags when display width less than 650px

--- a/src/scss/mobile.scss
+++ b/src/scss/mobile.scss
@@ -121,6 +121,9 @@
         }
         &__info {
             font-size: 12px;
+            &-tags {
+                gap: 8px;
+            }
         }
     }
 }
